--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,11 +139,8 @@ jobs:
         done
     
     - name: Upload Release Assets
-      uses: actions/upload-release-asset@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ github.event.upload_url }}
-        asset_path: ./release-assets/
-        asset_name: chronorust-binaries
-        asset_content_type: application/zip
+        files: ./release-assets/*
