Fix Windows binary upload in GitHub Actions
- Added support for chronorust.exe files in Prepare Release Assets
- Windows binary was not being uploaded because script only looked for 'chronorust' files
- Now handles both 'chronorust' and 'chronorust.exe' files properly
- This should fix the missing Windows binary in releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,6 +142,9 @@ jobs:
                   else
                     cp "$file" "../release-assets/chronorust-linux-x86_64"
                   fi
+                elif [[ "$file" == "chronorust.exe" ]]; then
+                  # Handle Windows .exe files
+                  cp "$file" "../release-assets/chronorust-windows-x86_64.exe"
                 fi
               fi
             done
