Fix Windows binary signing PowerShell commands
- Fixed mv command issue by using PowerShell Remove-Item and Rename-Item
- Windows binary signing should now work correctly
- Version updated to 0.2.19

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,8 +122,9 @@ jobs:
         # Sign the binary
         osslsigncode sign -certs cert.pem -key key.pem -n "ChronoRust" -i "https://github.com/stulluk/chronorust" -t http://timestamp.digicert.com -in target/${{ matrix.target }}/release/chronorust.exe -out target/${{ matrix.target }}/release/chronorust-signed.exe
         
-        # Replace original with signed version
-        mv target/${{ matrix.target }}/release/chronorust-signed.exe target/${{ matrix.target }}/release/chronorust.exe
+        # Replace original with signed version (PowerShell compatible)
+        Remove-Item target/${{ matrix.target }}/release/chronorust.exe
+        Rename-Item target/${{ matrix.target }}/release/chronorust-signed.exe target/${{ matrix.target }}/release/chronorust.exe
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
