Fix Windows binary signing with Move-Item command
- Fixed Rename-Item issue by using Move-Item instead
- Windows binary signing should now work correctly
- Version updated to 0.2.20

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
         
         # Replace original with signed version (PowerShell compatible)
         Remove-Item target/${{ matrix.target }}/release/chronorust.exe
-        Rename-Item target/${{ matrix.target }}/release/chronorust-signed.exe target/${{ matrix.target }}/release/chronorust.exe
+        Move-Item target/${{ matrix.target }}/release/chronorust-signed.exe target/${{ matrix.target }}/release/chronorust.exe
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
