--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ keywords = ["chronometer", "timer", "terminal", "cli"]
 categories = ["command-line-utilities"]
 
 [dependencies]
+crossterm = "0.27"
 chrono = "0.4"
 ratatui = "0.25"
